--- a/Collection.html
+++ b/Collection.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="index.html">Home</a>
-    <a href="collection.html">Collection</a>
+    <a href="Collection.html">Collection</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
 
